cmake_minimum_required(VERSION 3.9)

project(moddable C)

add_definitions(-DmxCompile)

if (WIN32)
    add_definitions(-D_MSC_VER=2000 -D_M_X64=1)
endif(WIN32)

set(MODDABLE_DIR ../moddable)

include_directories(${MODDABLE_DIR}/xs/platforms)

list(APPEND xs_SOURCES ${MODDABLE_DIR}/xs/sources/xsPromise.c)
list(APPEND xs_SOURCES ${MODDABLE_DIR}/xs/sources/xsre.c)
list(APPEND xs_SOURCES ${MODDABLE_DIR}/xs/sources/xsGlobal.c)
list(APPEND xs_SOURCES ${MODDABLE_DIR}/xs/sources/xsAtomics.c)
list(APPEND xs_SOURCES ${MODDABLE_DIR}/xs/sources/xsDefaults.c)
list(APPEND xs_SOURCES ${MODDABLE_DIR}/xs/sources/xsAll.c)
list(APPEND xs_SOURCES ${MODDABLE_DIR}/xs/sources/xsdtoa.c)
list(APPEND xs_SOURCES ${MODDABLE_DIR}/xs/sources/xsMath.c)
list(APPEND xs_SOURCES ${MODDABLE_DIR}/xs/sources/xsDate.c)
list(APPEND xs_SOURCES ${MODDABLE_DIR}/xs/sources/xsRun.c)
list(APPEND xs_SOURCES ${MODDABLE_DIR}/xs/sources/xsObject.c)
list(APPEND xs_SOURCES ${MODDABLE_DIR}/xs/sources/xsSyntaxical.c)
list(APPEND xs_SOURCES ${MODDABLE_DIR}/xs/sources/xsScope.c)
list(APPEND xs_SOURCES ${MODDABLE_DIR}/xs/sources/xsError.c)
list(APPEND xs_SOURCES ${MODDABLE_DIR}/xs/sources/xsScript.c)
list(APPEND xs_SOURCES ${MODDABLE_DIR}/xs/sources/xsGenerator.c)
list(APPEND xs_SOURCES ${MODDABLE_DIR}/xs/sources/xsRegExp.c)
list(APPEND xs_SOURCES ${MODDABLE_DIR}/xs/sources/xsMarshall.c)
list(APPEND xs_SOURCES ${MODDABLE_DIR}/xs/sources/xsMapSet.c)
list(APPEND xs_SOURCES ${MODDABLE_DIR}/xs/sources/xsProxy.c)
list(APPEND xs_SOURCES ${MODDABLE_DIR}/xs/sources/xsJSON.c)
list(APPEND xs_SOURCES ${MODDABLE_DIR}/xs/sources/xsCommon.h)
list(APPEND xs_SOURCES ${MODDABLE_DIR}/xs/sources/xsBoolean.c)
list(APPEND xs_SOURCES ${MODDABLE_DIR}/xs/sources/xsMemory.c)
list(APPEND xs_SOURCES ${MODDABLE_DIR}/xs/sources/xsType.c)
list(APPEND xs_SOURCES ${MODDABLE_DIR}/xs/sources/xsTree.c)
list(APPEND xs_SOURCES ${MODDABLE_DIR}/xs/sources/xsFunction.c)
list(APPEND xs_SOURCES ${MODDABLE_DIR}/xs/sources/xsCommon.c)
list(APPEND xs_SOURCES ${MODDABLE_DIR}/xs/sources/xsDataView.c)
list(APPEND xs_SOURCES ${MODDABLE_DIR}/xs/sources/xsSymbol.c)
list(APPEND xs_SOURCES ${MODDABLE_DIR}/xs/sources/xsCode.c)
list(APPEND xs_SOURCES ${MODDABLE_DIR}/xs/sources/xsSourceMap.c)
list(APPEND xs_SOURCES ${MODDABLE_DIR}/xs/sources/xsAPI.c)
list(APPEND xs_SOURCES ${MODDABLE_DIR}/xs/sources/xsArray.c)
list(APPEND xs_SOURCES ${MODDABLE_DIR}/xs/sources/xsmc.c)
list(APPEND xs_SOURCES ${MODDABLE_DIR}/xs/sources/xsString.c)
list(APPEND xs_SOURCES ${MODDABLE_DIR}/xs/sources/xsAll.h)
list(APPEND xs_SOURCES ${MODDABLE_DIR}/xs/sources/xsDebug.c)
list(APPEND xs_SOURCES ${MODDABLE_DIR}/xs/sources/xsModule.c)
list(APPEND xs_SOURCES ${MODDABLE_DIR}/xs/sources/xsScript.h)
list(APPEND xs_SOURCES ${MODDABLE_DIR}/xs/sources/xsProperty.c)
list(APPEND xs_SOURCES ${MODDABLE_DIR}/xs/sources/xsProfile.c)
list(APPEND xs_SOURCES ${MODDABLE_DIR}/xs/sources/xsLexical.c)
list(APPEND xs_SOURCES ${MODDABLE_DIR}/xs/sources/xsNumber.c)

list(APPEND xs_HEADERS ${MODDABLE_DIR}/xs/includes/xs.h)
list(APPEND xs_HEADERS ${MODDABLE_DIR}/xs/includes/xsmc.h)
list(APPEND xs_HEADERS ${MODDABLE_DIR}/xs/includes/xsesp.h)
list(APPEND xs_HEADERS ${MODDABLE_DIR}/xs/sources/xsAll.h)
list(APPEND xs_HEADERS ${MODDABLE_DIR}/xs/sources/xsCommon.h)
list(APPEND xs_HEADERS ${MODDABLE_DIR}/xs/sources/xsScript.h)
list(APPEND xs_HEADERS ${MODDABLE_DIR}/xs/platforms/xsPlatform.h)
list(APPEND xs_HEADERS ${MODDABLE_DIR}/xs/platforms/win_xs.h)
list(APPEND xs_HEADERS ${MODDABLE_DIR}/xs/platforms/mac_xs.h)
list(APPEND xs_HEADERS ${MODDABLE_DIR}/xs/platforms/lin_xs.h)

add_library(xs STATIC ${xs_SOURCES})
set_target_properties(xs PROPERTIES PUBLIC_HEADER "${xs_HEADERS}")
install(TARGETS xs
        ARCHIVE DESTINATION lib
        PUBLIC_HEADER DESTINATION include/xs
)
